# open-locomotion-dataset

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DATASET_LICENSE.md  LICENSE  README.md  index.html  pyproject.toml
.github/workflows/: ci.yml  test.yml
configs/robots/: ant.yaml  anymal_d.yaml  go1.yaml  halfcheetah.yaml  hopper.yaml  unitree_g1.yaml  walker2d.yaml
configs/sim2real/: anymal_d.alignment.json  anymal_d.yaml  go1.smoke.alignment.json  go1.smoke.yaml  go1.yaml  template.yaml
docs/: future_work.md  unitree_comparison.md
examples/: load_and_visualize.py
notebooks/: quickstart.ipynb
notebooks/.ipynb_checkpoints/: quickstart-checkpoint.ipynb
olsd/: __init__.py  cli.py
olsd/benchmark/: evaluate.py  tasks.py  train_baseline.py
olsd/generation/: domain_random.py  mujoco_gen.py
olsd/pipeline/: export.py  ingest.py  ingest_grandtour.py  ingest_tail.py  ingest_unitree.py  license_check.py  metrics.py  validate.py
olsd/schema/: __init__.py  alignment.py  metadata.py  rewards.py  trajectory.py
olsd/sdk/: loader.py  visualization.py
olsd/sim2real/: __init__.py  _io.py  alignment_eval.py  domain_config.py  go1_compare.py  go1_env.py  system_id.py  terrain.py
scripts/: assemble_dataset.py  build_phase2_report.py  compare_go1_baselines.py  license_check.py  materialize_grandtour_anymal.py  real_robot_demo.py  rebenchmark_v2.py  train_go1.py  upload_to_hf.py  verify_flat_policy.py
tests/: test_external_ingest.py  test_go1_compare.py  test_pipeline.py  test_schema.py  test_sim2real.py
